# binance_azure_sdk

./: .pre-commit-config.yaml  README.md  notify_low_balance.py  notify_portfolio_summary.py  pyproject.toml  raspberry_cron.txt  run_dca_strategy.py
.github/workflows/: main.yml
data/: config.yaml
examples/: azure_database_sync_with_binance.py  azure_db_manager.py  azure_get_secret_key.py  binance_manager.py  databse_table_creation.sql
services/: azure_manager.py  config.yaml  crypto_market_fetcher.py  market_manager.py
services/notification/: base_notifier.py  helpers.py  portfolio_reporter.py  wallet_balance_notifier.py
services/src/: helpers.py  market_manager_helper.py
src/: azure_config.py  crypto_market_fetcher.py  helpers.py  market_manager.py
strategy/: config.yaml  dca_config_loader.py  dca_strategy.py
strategy/src/: azure_sql.py  binance_trading.py  dates.py  setup.py
tests/: test_azure_config.py  test_azure_database_manager.py  test_azure_key_vault_manager.py  test_azure_manager.py  test_crypto_market_fetcher.py  test_market_manager.py  test_market_manager_helper.py
